# Innoter

./: .env.example  .pre-commit-config.yaml  Dockerfile  celery-entrypoint.sh  django-entrypoint.sh  docker-compose.yml  manage.py  pyproject.toml
Innoter/: asgi.py  settings.py  urls.py  wsgi.py
Innotter/: asgi.py  settings.py  urls.py  wsgi.py
apps/: producer.py
apps/like/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/like/migrations/: 0001_initial.py
apps/page/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/page/migrations/: 0001_initial.py  0002_initial.py  0003_page_is_permanently_blocked.py  0004_alter_page_tags.py
apps/post/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py
apps/tag/: admin.py  permissions.py  serializers.py  urls.py  views.py
apps/tag/migrations/: 0001_initial.py
apps/tests/: conftest.py
apps/tests/like_logic/: conftest.py  like_logic.py
apps/tests/page_logic/: conftest.py  page_tests.py
apps/tests/post_logic/: conftest.py  post_tests.py
apps/tests/tags_logic/: conftest.py  (+1 more)
apps/user/: backends.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
innotter/: celery.py  settings.py  urls.py
microservice/: Dockerfile  consumer.py  jwt_auth.py  main.py  settings.py
microservice/models/: page_statistics.py
microservice/routes/: page_statistics_routes.py
microservice/services/: database_service.py  page_service.py
(+4 files in other folders)
