[tool.poetry]
name = "innotter"
version = "0.1.0"
description = ""
authors = ["Alex <aleks.krutsko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
